--- a/public/style.css
+++ b/public/style.css
@@ -2586,11 +2586,11 @@ ul.nav-dropdown-xxx {
         position: relative;
     }
     .delete-btn {
-        position: absolute;
-        top: 10px;
+        /* position: absolute; */
+        margin-top: 30px;
         right: 10px;
-        padding: 5px;
-        font-size: 8px;
+        font-size: 12px !important;
+        padding: 2px 5px !important;
     }
     .delivery-info,
     .delivery-fee,
