--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -17,7 +17,7 @@
     overflow: hidden;
     height: 150px;
     margin: 5px;
-    border-radius: 10px; 
+    border-radius: 10px;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -25,7 +25,7 @@
 .preview-image-partenaire img{
     object-fit: cover;
     height: 100%;
-   
+
 }
 .preview-image-partenaire img:hover{
     transform: scale(1.1);
@@ -54,3 +54,7 @@
     right: 10px;
     top: 10px;
 }
+.table-custom thead th {
+    color: white !important;
+}
+
