--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -58,3 +58,12 @@
     color: white !important;
 }
 
+.text-color{
+ color: #008080;
+}
+.text-color2{
+ color: #3d3c3c;
+}
+.message-style{
+    font-size: 12px; color: #008080; cursor: pointer;
+}
