--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -67,3 +67,15 @@
 .message-style{
     font-size: 12px; color: #008080; cursor: pointer;
 }
+.hover-card {
+    transition: transform 0.2s;
+}
+.hover-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+.table-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
