--- a/public/style.css
+++ b/public/style.css
@@ -985,17 +985,18 @@ body {
 
 
 .div-scroll-publier{
-    position: absolute;
+        margin-top: 15px;
+
+    /* position: absolute;
     margin-left:auto;
     margin-right: 15%;
     margin-bottom: 20px;
-    margin-top: 15px;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100px;
-    height: 100px;
+    height: 100px; */
 }
 .container-search {
     position: absolute;
