--- a/public/style.css
+++ b/public/style.css
@@ -2396,11 +2396,17 @@ ul.nav-dropdown-xxx {
     padding: 10px 20px;
     border-radius: 6px;
     transition: background-color 0.3s, transform 0.2s;
+    margin-left: 17px;
 }
 
 .address-btn:hover {
     color: #fff;
     transform: translateY(-2px);
+}
+
+.rtl-margin {
+    margin-left: 0 !important;
+    margin-right: 17px !important;
 }
 
 .collapse-toggle {
