--- a/public/style.css
+++ b/public/style.css
@@ -3713,3 +3713,18 @@ body[dir="rtl"] .custom-cancel-btn {
     color: #454949;
     text-decoration: underline;
 }
+
+.discount-badge-details {
+    background-color: #d8181b;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    /* vertical-align: middle; */
+
+    padding: .47em .8em;
+    font-size: 82%;
+    border-radius: .15rem;
+    letter-spacing: 0.08rem;
+}
+
+
