--- a/public/style.css
+++ b/public/style.css
@@ -599,6 +599,9 @@ body {
     background-color: #008080 !important;
     color: white !important;
 }
+.btn-add-favoris {
+    border-color: #008080 !important;
+}
 
 .cursor {
     cursor: pointer;
