--- a/public/assets/css/plugins/flaticon.css
+++ b/public/assets/css/plugins/flaticon.css
@@ -5,6 +5,7 @@
 
 @font-face {
   font-family: "Flaticon";
+  font-display: swap;
   src: url("../fonts/Flaticon.eot");
   src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
        url("../fonts/Flaticon.woff") format("woff"),
@@ -15,6 +16,7 @@
 }
 @font-face {
   font-family: "Flaticon";
+  font-display: swap;
   src: url("../fonts/houses.eot");
   src: url("../fonts/houses.eot?#iefix") format("embedded-opentype"),
        url("../fonts/houses.woff") format("woff"),
@@ -29,6 +31,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
+    font-display: swap;
     src: url("../fonts/Flaticon.svg#Flaticon") format("svg");
   }
 }
