--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -36,7 +36,7 @@
 /*------------------------------------
 	Fonts
 ------------------------------------ */
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap&subset=latin&display=swap');
 
 /*------------------------------------------------------------
 	Global Settings
